Mon Aug  9 15:49:54 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/URL.cc (parse): fix PR#348, to make sure a missing or invalid
	port number will get set correctly.

Mon Aug  9 15:42:41 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html:
	Added descriptions for attributes that were missing, added a few
	clarifications, and corrected a few defaults and typos.
	Covers PR#558, PR#626, and then some.

Mon Aug  9 15:35:50 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* configure.in, configure, include/htconfig.h.in, htlib/regex.c:
	PR#545 fixed - configure tests for presence of alloca.h for regex.c

Sat Aug 07 13:40:17 1999  Loic Dachary  <loic@ceic.com>

	* configure.in: remove test for strptime. Run autoconf + autoheader.

	* htlib/HtDateTime.cc: always use htdig strptime, do not try to use
	  existing function in libc.

	* htlib/HtDateTime.h: move inclusion of htconfig.h on top of file,
	  change #ifdef HAVE_CONFIG to HAVE_CONFIG_H

Fri Aug  6 16:37:33 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Document.cc (UseProxy): fix call to match() and test of
	return value to work as documented for http_proxy_exclude (PR#603).

Fri Aug 06 15:06:23 1999    <loic@yoda.ceic.com>

	* db/dist/config.hin, db/mp/mp_cmpr.c db/db/db.c, db/mp/mp_fopen.c: 
	  disable compression if zlib not found by configure.

Thu Aug 05 12:27:15 1999    <loic@yoda.ceic.com>

	* test/dbbench.cc: invert -z and -Z for consistency

	* test/Makefile.am: add dbbench call examples

Thu Aug 05 11:38:58 1999  Loic Dachary  <loic@ceic.com>

	* test/Makefile.am: all .html go in distribution, compile dbbench
	  that tests Berkeley DB performances.

	* configure.in/Makefile.am: conditional inclusion of the test
	  directory in the list of subdirs (--enable-test). The list
	  of subdirs is now @HTDIGDIRS@ in configure.in & Makefile.am
